--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -430,3 +430,14 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - fixed: Rewrite .c2 file if c2 errors exist. 
           =>  if unfixed errors exist with EdcEcc.exe or edccchk or cdmage though .c2 file rewritten is all zero byte,
               maybe the drive misses to report the c2 error.
+
+*2018-03-04
+- added: bd command
+- added: mds command
+- added: /am option
+- changed: Doesn't check reading lead-in/out when uses audio command.
+- fixed: audio/data command (didn't work from 2017-12-10)
+- improved: Dumping of SafeDisc (only Skips rereading for safedisc 312 errors)
+             => The problem is that dic skips rereading if unintentional error is also 312.
+- improved: Dumping of PC-FX disc (Super PCEngine Fan Deluxe - Special CD-ROM Vol. 1)
+- improved: Reading directory record (Formula GP SLES-03994)
