--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -443,7 +443,7 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - improved: Reading directory record (Formula GP SLES-03994)
 
 *2018-04-19
-- added: support HD-DVD and raw dump and GC/Wii disc
+- added: Support HD-DVD and raw dump and GC/Wii disc
           => HD-DVD: use 'dvd' command. raw dump and GC/Wii disc: use 'dvd' command and /raw option.
              (GC/Wii disc is only supported by GDR-8082, 8161, 8162, 8163, 8164)
              If you want to unscramble GC/Wii raw image, put unscramler.exe in dic directory.
@@ -455,3 +455,17 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - fixed: /ss option (support ProtectCD VOB minus offset disc)
 - fixed: /c option (skip returning error)
 - improved: Reading sub-channel (if random error occurs to rmsf or amsf, exec /f forcibly)
+
+*2018-05-22
+- added: swap command (This is for non-Plextor drive)
+- added: ls command (This shows maxium drive speed in command-line screen)
+- added: Support PS2 unlicensed disc (needs to use /sf. This protect looks like a safedisc)
+- added: GC/Wii dumping drive (support GCC-4160N, 4240N, 4243N, 4247N)
+- added: Check subQ adr and RtoW before dumping of GD-ROM
+- added: Check if PSX PAL or not (for /nl)
+- added: Output .dat file for BD-ROM
+- changed: Rereading the sector if crc16 of subQ is currupt, not rmsf or amsf
+- changed: Disable beep except disc dumping command (cd, dvd etc.)
+- fixed: Checking error of subQ track
+- fixed: Reading path table record of GD-ROM (support path table size is over 2352)
+- fixed: dumping CD-i ready (not unscramble the pregap sector)
