--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -470,11 +470,12 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - fixed: Reading path table record of GD-ROM (support path table size is over 2352)
 - fixed: dumping CD-i ready (not unscramble the pregap sector)
 
-*2018-06-14
+*2018-06-19
 - added: xbox command (support XGD2 of XBOX/XBOX 360)
 - added: PIC.bin for BD based disc
 - added: /74 option in swap command (for ring data of Sega Saturn)
 - added: SESSION syntax in cue file
+- added: .dat for floppy
 - changed: the way to get the timestamp
 - changed: permit to continue reading if the disc is CD-R or CD-RW and c2 errors are over 10000
 - changed: Plextor drives support only latest firmware
@@ -482,11 +483,15 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - fixed: TOC of multi session disc
 - fixed: GetWriteOffset for ASUS
 - fixed: sub-qchannel reading
-- fixed: Reading directory record (incorrect data length of DVD)
-
-*2018-06-18
-- added: .dat for floppy
-- changed: the way to get the timestamp again
-- fixed: disc.txt for xbox (added total size of xbox disc, fixed #2 of security sector range)
 - fixed: misdetection of MCN before dumping
-- fixed: transfer length of DVD/BD
+- fixed: Reading directory record (incorrect data length of DVD)
+- fixed: Reading Volume Descriptor of DVD
+
+*2018-07-26
+- added: CSS authentication
+          => CSS.exe is needed. Please download and put exe into Release_ANSI directory of DIC.
+             https://github.com/saramibreak/CSS/releases
+- added: Linux build
+- fixed: Reading directory record of GD-ROM
+- fixed: /s option (/s 0 and /c2 can't use together)
+- fixed: Disc log of DVD (Region)
