--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -502,3 +502,8 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - added: makefile for linux
 - improved: Reading sub-channel (create QGenSector from QNextSector - 1 and QPrevSector + 1)
 - fixed: _splitpath for linux (added null checking)
+
+*2018-08-28
+- added: Support XGD3 dumping on kreon drive
+- fixed: Rereading of SecuROM/Libcrypt
+- deleted: some warning
