--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -606,3 +606,7 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - fixed: fail to XBOX/XBOX 360 dumping from 2019-11-16
 - fixed: main channel buffering (ROM^2 Karaoke Volume 5 [PCE])
 - improved: UDF logging => support detecting the size of DVD-RE, BD-R, BD-RE
+
+*2020-01-20
+- fixed: detecting 2nd Anchor Volume Descriptor Pointer
+- fixed: parse driveOffset.txt
