--- a/Doc/Todo.txt
+++ b/Doc/Todo.txt
@@ -7,6 +7,23 @@
 
 . support twin sector disc (for ALPHA-ROM, ROOT, TAGES)
 
+[main]
+. check IED, EDC of DVD
+  ecma-267 p24
+  [quote]
+  16.2 ID Error Detection Code (IED) 
+  When identifying all bytes of the array shown in figure 16 as Ci,j for i = 0 to 11 and j = 0 to171, the check bytes of 
+  IED are represented by C0,j for j = 4 to 5. Their setting is obtained as follows. 
+  [/quote]
+  
+  [quote]
+  16.4 Error Detection Code (EDC) 
+  This 4-byte field shall contain the check bits of an Error Detection Code computed over the preceding 2 060 bytes 
+  of the Data Frame. Considering the Data Frame as a single bit field starting with the most significant bit of the first 
+  byte of the ID field and ending with the least significant bit of the EDC field, then this msb will be b16 511 and the 
+  lsb will be b0. Each bit bi of the EDC is as follows for i = 31 to 0 : 
+  [/quote]
+
 [sub]
 . check parity P, Q for CD+G
   https://webstore.iec.ch/publication/3885 p24
